syntax = "proto3";

package clustergenie;

option go_package = "github.com/AvinashMahala/ClusterGenie/backend/shared/proto";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

// Provisioning Service
service ProvisioningService {
  rpc CreateDroplet (CreateDropletRequest) returns (DropletResponse);
  rpc GetDroplet (GetDropletRequest) returns (DropletResponse);
  rpc ListDroplets (ListDropletsRequest) returns (ListDropletsResponse);
  rpc DeleteDroplet (DeleteDropletRequest) returns (DeleteDropletResponse);
}

message CreateDropletRequest {
  string name = 1;
  string region = 2;
  string size = 3;
  string image = 4;
}

message GetDropletRequest {
  string id = 1;
}

message ListDropletsRequest {}

message DeleteDropletRequest {
  string id = 1;
}

message DropletResponse {
  Droplet droplet = 1;
  string message = 2;
}

message ListDropletsResponse {
  repeated Droplet droplets = 1;
}

message DeleteDropletResponse {
  string message = 1;
}

message Droplet {
  string id = 1;
  string name = 2;
  string region = 3;
  string size = 4;
  string image = 5;
  string status = 6;
  string created_at = 7;
  string ip_address = 8;
}

// Diagnosis Service
service DiagnosisService {
  rpc DiagnoseCluster (DiagnoseClusterRequest) returns (DiagnoseClusterResponse);
}

message DiagnoseClusterRequest {
  string cluster_id = 1;
}

message DiagnoseClusterResponse {
  Cluster cluster = 1;
  repeated string insights = 2;
  repeated string recommendations = 3;
}

message Cluster {
  string id = 1;
  string name = 2;
  string region = 3;
  repeated string droplets = 4;
  string status = 5;
  string last_checked = 6;
}

// Job Service
service JobService {
  rpc CreateJob (CreateJobRequest) returns (JobResponse);
  rpc GetJob (GetJobRequest) returns (JobResponse);
  rpc ListJobs (ListJobsRequest) returns (ListJobsResponse);
}

message CreateJobRequest {
  string type = 1;
  map<string, string> parameters = 2;
}

message GetJobRequest {
  string id = 1;
}

message ListJobsRequest {}

message JobResponse {
  Job job = 1;
  string message = 2;
}

message ListJobsResponse {
  repeated Job jobs = 1;
}

message Job {
  string id = 1;
  string type = 2;
  string status = 3;
  string created_at = 4;
  string completed_at = 5;
  string result = 6;
  string error = 7;
}

// Monitoring Service
service MonitoringService {
  rpc GetMetrics (GetMetricsRequest) returns (GetMetricsResponse);
}

message GetMetricsRequest {
  string cluster_id = 1;
  string type = 2;
}

message GetMetricsResponse {
  repeated Metric metrics = 1;
  string period = 2;
}

message Metric {
  string id = 1;
  string cluster_id = 2;
  string type = 3;
  double value = 4;
  string timestamp = 5;
  string unit = 6;
}